--- a/src/App/index.css
+++ b/src/App/index.css
@@ -35,6 +35,12 @@
   width: 105px !important;
 }
 
+.SingleDatePickerInput .SingleDatePickerInput_calendarIcon {
+  float: right;
+  padding: 15px;
+  margin: 0px 5px 0px 0px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
